--- a/src/views/inc/_features.pug
+++ b/src/views/inc/_features.pug
@@ -14,7 +14,7 @@ each item,index in features
                 h3(class='features__title features__title--firstblock')= item.title
                 p(class='features__description')!= item.description
                 .sign
-                    input(class='sign__input' type='text' placeholder='John Smith' value='John Smith' class='input sign__input')
+                    input(class='sign__input' type='text' placeholder='John Smith' class='input sign__input')
                     button(class='sign__submit'  type='submit' class='btn sign__submit') sign
 
             .features__colimg
